style(add-community): apply responsive styles and fix scroll issues on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ body {
 }
 
 .gradient-text {
+  text-align: center;
   font-weight: bold;
   background: linear-gradient(to right, #14b8a6, #a855f7, #ec4899); /* teal to purple to pink */
   -webkit-background-clip: text;
